--- a/css/styles.css
+++ b/css/styles.css
@@ -238,9 +238,9 @@ body {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.btn:active {
-  transform: translateY(-0.25rem) scale(0.9);
-  transition-duration: 0.2s;
+.btn.active {
+  transform: translateY(-0.25rem) scale(0.95);
+  transition-duration: 0.15s;
 }
 
 #resetButton {
@@ -798,6 +798,25 @@ body.dark-mode {
 
 /* Mobile styles */
 @media only screen and (max-width: 768px) {
+  .click-area-correct,
+  .click-area-wrong {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    cursor: pointer;
+    z-index: 1;
+    height: 50vw !important;
+    width: 50vw !important;
+  }
+
+  .click-area-correct {
+    left: 0;
+  }
+
+  .click-area-wrong {
+    right: 0;
+  }
+
   .table-results,
   .demo-table-results {
     font-size: 16px;
@@ -808,7 +827,7 @@ body.dark-mode {
     margin: 16px;
   }
   .container {
-    height: 730px;
+    height: 750px;
   }
 
   .table-results-container {
@@ -1442,4 +1461,28 @@ body.dark-mode {
 }
 .discord-bg-color-99 {
   background-color: var(--discord-color-99) !important;
+}
+
+.btn-wrapper {
+  position: relative;
+}
+
+.click-area-correct,
+.click-area-wrong {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  cursor: pointer;
+  z-index: 1;
+  height: 18vw;
+  width: 24vw;
+}
+
+.click-area-correct {
+  left: 0;
+  right: 0;
+}
+
+.click-area-wrong {
+  right: 0;
 }
