--- a/css/styles.css
+++ b/css/styles.css
@@ -636,7 +636,7 @@ body.dark-mode {
   max-height: 170px;
 
   /* Prevents the page from expanding when content is added. */
-  min-height: 170px;
+  min-height: 210px;
 
   overflow-y: auto;
   position: relative;
@@ -794,6 +794,12 @@ body.dark-mode {
   padding: 8px;
   border-radius: 8px;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  display: inline-block;
+}
+
+.table-results-type-name {
+  width: 60px !important;
+  text-align: center;
 }
 
 .table-results-type,
@@ -834,12 +840,12 @@ body.dark-mode {
     margin: 16px;
   }
   .container {
-    height: 750px;
+    height: 830px;
   }
 
   .table-results-container {
     max-height: 170px;
-    min-height: 170px;
+    min-height: 250px;
     width: 100%;
   }
 
@@ -1492,4 +1498,13 @@ body.dark-mode {
 
 .click-area-wrong {
   right: 0;
+}
+
+.newest-row {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.newest-row.fade-in {
+  opacity: 1;
 }
