feat: update cuz my phone crashes in the winter

--- a/css/styles.css
+++ b/css/styles.css
@@ -1537,6 +1537,10 @@ body.dark-mode {
   margin-right: 10px;
 }
 
+.filter-container {
+  display: flex;
+}
+
 .volume-slider {
   color: var(--nitro-color);
 }
