--- a/css/styles.css
+++ b/css/styles.css
@@ -1545,6 +1545,10 @@ body.dark-mode {
   color: var(--nitro-color);
 }
 
+.lock-container {
+  position: absolute;
+}
+
 input[type="number"],
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
